Add spacing and change to 'share this app'

--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@
             <button class="header-btn" id="galleryBtn">Choose Mask</button>
             <button class="header-btn" id="makeMaskBtn">Create Mask</button>
         </div>
-        <div class="tap-hint">tap screen to change masks <button class="share-btn" id="headerShareBtn">share</button></div>
+        <div class="tap-hint">tap screen to change masks &nbsp;&nbsp;&nbsp; <button class="share-btn" id="headerShareBtn">share this app</button></div>
 
         <!-- Face Tracking View -->
         <div class="view active" id="trackView">
